# src/GuildSaber.Api/Features/Guilds/Http/Mappers.cs
@@ -25,6 +25,7 @@ public static class GuildMappers
                 MaxRank: self.Requirements.MaxRank,
                 MinPP: self.Requirements.MinPP,
                 MaxPP: self.Requirements.MaxPP,
+                MinPlayCount: self.Requirements.MinPlayCount,
                 AccountAgeUnix: self.Requirements.AccountAgeUnix
             ),
             self.Status.Map(),
@@ -50,6 +51,7 @@ public static class GuildMappers
                     MaxRank: self.Requirements.MaxRank,
                     MinPP: self.Requirements.MinPP,
                     MaxPP: self.Requirements.MaxPP,
+                    MinPlayCount: self.Requirements.MinPlayCount,
                     AccountAgeUnix: self.Requirements.AccountAgeUnix
                 ),
                 self.Status.Map(),
@@ -99,6 +101,7 @@ public static class GuildMappers
             MaxRank: self.Requirements.MaxRank,
             MinPP: self.Requirements.MinPP,
             MaxPP: self.Requirements.MaxPP,
+            MinPlayCount: self.Requirements.MinPlayCount,
             AccountAgeUnix: self.Requirements.AccountAgeUnix
         ),
         self.Status.Map(),
@@ -111,6 +114,7 @@ public static class GuildMappers
         MaxRank: self.MaxRank,
         MinPP: self.MinPP,
         MaxPP: self.MaxPP,
+        MinPlayCount: self.MinPlayCount,
         AccountAgeUnix: self.AccountAgeUnix
     );
 
