# src/GuildSaber.Api/Features/Guilds/Http/Responses.cs
@@ -18,6 +18,7 @@ public static class GuildResponses
         int? MaxRank,
         int? MinPP,
         int? MaxPP,
+        int? MinPlayCount,
         int? AccountAgeUnix
     );
 
